upgrade(backend): Java 25, Spring Boot 4.0.6, jakarta migration