@@ -1,5 +1,7 @@
 package com.behsa.medportal.service;
 
+import java.util.List;
+
 import com.behsa.medportal.domain.CustomAuditEventEntity;
 import org.springframework.boot.actuate.audit.AuditEvent;
 import org.springframework.security.web.authentication.WebAuthenticationDetails;
@@ -21,7 +23,7 @@ public class CustomAuditEventConverter {
      */
     public List<AuditEvent> convertToAuditEvent(Iterable<CustomAuditEventEntity> persistentAuditEvents) {
         if (persistentAuditEvents == null) {
-            return Collections.emptyList();
+            return List.of();
         }
         List<AuditEvent> auditEvents = new ArrayList<>();
         for (CustomAuditEventEntity persistentAuditEvent : persistentAuditEvents) {
